--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -2,7 +2,7 @@
   <head>
   </head>
   <body>
-      <h1>{{title}}</h1>
+      <h1>{{title}} in Handlebars</h1>
       <ul>
         {{#each list}}
            <li>{{this}}</li>
