--- a/src/views/bookListView.ejs
+++ b/src/views/bookListView.ejs
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
   </head>
   <body>
 <header class="navbar navbar-bright navbar-fixed-top" role="banner">
@@ -88,19 +88,17 @@
           
           
           <!--/stories-->
-          <% for(var m=0;m<books.length;m++){%>
+          
           <div class="row">    
             <br>
             <div class="col-md-2 col-sm-3 text-center">
               <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
             </div>
             <div class="col-md-10 col-sm-9">
-              <h3><%=books[m].title%></h3>
+              <h3><%=book.title%></h3>
               <div class="row">
                 <div class="col-xs-9">
-                  <h4><span class="label label-default"><%=books[m].author%></span></h4><h4>
-                  <small style="font-family:courier,'new courier';" class="text-muted">
-                    <a href="books/<%=m%>" class="text-muted">Read More</a></small>
+                  <h4><span class="label label-default"><%=book.author%></span></h4><h4>            
                   </h4></div>
                 <div class="col-xs-3"></div>
               </div>
@@ -108,7 +106,7 @@
             </div>
           </div>
           <hr>
-          <%}%>
+        
           <!--/stories-->
           
           
